--- a/src/componentss/css/card.css
+++ b/src/componentss/css/card.css
@@ -1,90 +1,107 @@
 .contenedor-card{
-    width: 70%;
-    height: 50%;
-
-    
+    width: 60%;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
 }
-.card{
+.cont_card{
     width: 100%;
     height: 100%;
+    background-color: rgb(252, 255, 177);
+    border: solid black 2px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.14),
+    0px 0px 19px 14px rgba(0,0,0,0.03),
+    0px 0px 26px 4px rgba(0,0,0,0.14);
+    border: 1px solid rgba(0,0,0,0);
+    border-radius:  4px;
 }
-.imagen-text{
+.cont_carta{
     width: 100%;
     height: 100%;
+    background-color: rgb(186, 247, 255);
+    box-shadow: 0px 0px 11px 1px rgba(0,0,0,0.14),
+        0px 0px 19px 14px rgba(0,0,0,0.03),
+        0px 0px 26px 4px rgba(0,0,0,0.14);
+    border: 1px solid rgba(0,0,0,0);
+    border-radius:  4px;
     display: flex;
     flex-direction: column;
-    border-radius: 5px ;
 }
-.imagen{
-    width: 100%;
-    height: 50%;
-    background-color: black;
-    background-image: url('../img/imagen-2.jpeg');
-    background-size:100% 100% ;
-    border-radius: 5px 5px 0px 0px  ;
-    display: flex;
-    flex-direction: column;
-    gap: 15%;
-}
-.temperatura{
-    display: flex;
-    align-items: center;
-}
-.inf-2{
-    width: 90%;
-    height: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.name{
-    font-weight: 400;
-    color: white;
-    font-size: 25px;
-    height: 10%;
-
-}
-.informacion{
-width: 100%;
-height: 32%;
-background-color: rgb(17, 150, 211);
-border-radius:  0px 0px 5px 5px ;
+.hr{
+    width: 80%;
+    background-color: rgb(0, 0, 0);
+    height: 2.5px;
+    border-radius:20px ;
 }
 .name-city{
-    font-weight: 700;
-    color: white;
-    font-size: 15px;
+    margin: 0%;
+    padding: 0%;
+}
+.namee{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .text{
     text-align: center;
+}
+.temp{
+    width: 100%;
+    text-align: center;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.ico-temp{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icono{
+    width: 140px;
+    height: 140px;
+}
+.tempo{
+    font-size: 45px;
+}
+.date{
+    width: 100%;
+    text-align: center;
+    height:10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.max-min{
+    width: 80%;
+    height: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.name-name{
     font-size: 20px;
-    font-weight: 600;
+}
+.name-fecha{
+    font-size: 15px;
 }
 @media all and (min-width: 800px){
-
-    .App{
-        width: 80%;
-        height: 100%;
-        margin: auto;
-    }
     .contenedor-card{
         width: 50%;
-        height: 50%;
-    
-        
+        height: 30%;
     }
 }
 @media all and (min-width: 1280px){
-
-    .App{
-        width: 80%;
-        height: 100%;
-        margin: auto;
-    }
     .contenedor-card{
         width: 22%;
-        height: 50%;
-    
-        
+        height: 30%;
     }
 }
