--- a/src/componentss/css/nav.css
+++ b/src/componentss/css/nav.css
@@ -54,14 +54,14 @@
         border-radius: var(--cornerRad);
         background-color: var(--primColor);
         box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
-        margin-top: 8px;
         overflow: hidden;
-        border-radius: 20px;
-        background-color: rgb(17, 150, 211)
+        background-color: rgb(0, 0, 0);
+        color: white;
+        height: 40px;
     }
     .menu a {
-        padding: 12px 24px;
-        margin: 0 5px;
+        padding: 12px 25px;
+        margin: 0 10px;
         color: var(--secoColor);
         border-bottom: 2px solid rgba(0, 0, 0, 0.1);
         border-radius: 10px;
@@ -90,8 +90,8 @@
 
  @media all and (min-width: 800px){
     .navegador{
-        width: 90%;
-        margin: auto;
+        width: 100%;
+
     }
     .nav menu {
         height: 20%;
@@ -103,7 +103,7 @@
  @media all and (min-width: 1280px){
 
     .navegador{
-        width: 80%;
+        width: 100%;
     }
 }
 
