--- a/src/componentss/css/style.css
+++ b/src/componentss/css/style.css
@@ -3,54 +3,52 @@
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
-
 .conta {
   width: 80%;
   height: 200px;
-  background-color: rgb(33, 26, 53);
+  background-color: #999696;
+  color: black;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
   border-radius: 20px;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  
 }
-
 .selects-container {
   width: 100%;
   display: flex;
+  margin-top: 15px;
   justify-content: space-around;
   height: 40px;
 }
-
 .moneda1 {
-  display: inline-block;
-  width: 100px;
+  display: flex;
+  width:30%;
+  border-radius: 20px;
 }
 .moneda2 {
-  display: inline-block;
-  width: 100px;
+  display: flex;
+  width:30%;
+  border-radius: 20px;
 }
-
 .inputs-container {
   width: 100%;
   display: flex;
   justify-content: space-around;
+
 }
-
-
 .input-field-2 {
-  width: 40%;
+  width: 90%;
   height: 40px;
   border-radius: 50px;
-  border: none;
   outline: none;
+  border: none;
   padding: 0 20px;
   font-size: 20px;
 }
-
 .btn {
   padding: 8px 18px;
   border: none;
@@ -59,4 +57,25 @@
   font-weight: bold;
   cursor: pointer;
   border-radius: 5px;
+}
+.cont-input{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  text-align: center;
+}
+.h5{
+  margin: 0%;
+  padding: 0%;
+}
+@media all and (min-width : 800px){
+  .conta{
+    width: 70%;
+  }
+}
+@media all and (min-width : 1280px){
+  .conta{
+    width: 60%;
+  }
 }
