--- a/src/componentss/css/weather.css
+++ b/src/componentss/css/weather.css
@@ -22,15 +22,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid black 1px;
-    background-color: rgb(17, 150, 211);
+    /* border: solid black 1px; */
+    background-color: rgb(255, 255, 255);
     border-radius: 20px;
 }
 .form-control{
     width:80%;
     height: 60%;
     margin: auto;
-    background-color: rgb(17, 150, 211);
+    background-color: rgb(255, 255, 255);
     border: none;
 }
 .form-control::placeholder { color: black; font-weight: bold; }
@@ -43,16 +43,14 @@
     align-items: center;
     border-radius: 50%;
     border: none;
-    background-color: rgb(17, 150, 211)
-
+    background-color: rgb(255, 255, 255)
 }
-.icono{
+.ico{
     width: 25px;
     height: 25px;
     color: black;
 }
 @media all and (min-width: 800px){
-
     .App{
         width: 80%;
         height: 100%;
@@ -65,7 +63,6 @@
     }
 }
 @media all and (min-width: 1280px){
-
     .App{
         width: 70%;
         height: 100%;
