--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import url(./shared/globalStyles.css);
 
-body {
+body, html {
   margin: 0;
+  width: 100%;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,4 +16,20 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root{
+  width: 100%;
+  height: 100%;
+}
+.contenedor-pro{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.App2{
+  width: 100%;
+  height: 100%;
+  background-color: #dfdfdf;
 }
