--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -2,6 +2,6 @@
     height: 100vh;
     width: 100vw;
     background-color: rgb(29, 25, 25);
-    border-radius: 30px;
+    /* border-radius: 30px; */
     display: flex;
 }
