--- a/src/shared/globalStyles.css
+++ b/src/shared/globalStyles.css
@@ -1,8 +1,7 @@
 .screen-container {
-  width: calc(100% - 100px);
+  width: 100%;
   height: 100%;
   background-color: #1e2a3e;
-  border-radius: 30px;
   background-color: #1e2a3e;
   opacity: 1;
   background-image: repeating-radial-gradient(
