--- a/src/componentss/css/style.css
+++ b/src/componentss/css/style.css
@@ -1,81 +1,216 @@
-.background {
+.comtenedor-promax-2{
+  width: 90%;
+  height: 70%;
+  background-color:rgb(230, 230, 230) ;
+  border-radius: 10px;
+}
+.header-2{
+  text-align: center;
   width: 100%;
-  height: 100vh;
+  height: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.conversion-2{
+  width: 100%;
+  height: 50%;
+}
+.importe-2{
+  width: 70%;
+  height: 25%;
+  display: flex;
+  margin-left: 15%;
+  flex-direction: column;
+  align-items: center;
+}
+.input-label-1{
+margin-right: 40%;
+font-size: 20px;
+}
+.input-field-1{
+  width: 80%;
+  height: 35%;
+  border: none;
+  border-radius: 10px;
+}
+.input-field-2{
+  width: 60%;
+  height: 35%;
+  border: none;
+  border-radius: 10px;
+}
+.opciones-2{
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.select-2{
+  width: 60%;
+  height: 35%;
+  border: none;
+  border-radius: 10px;
+}
+.resultado-2{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.botones-2{
+  width: 100%;
+  height: 10%;
   display: flex;
   justify-content: center;
 }
-.conta {
-  width: 80%;
-  height: 200px;
-  background-color: #999696;
-  color: black;
-  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  margin-top: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.selects-container {
-  width: 100%;
-  display: flex;
-  margin-top: 15px;
-  justify-content: space-around;
-  height: 40px;
-}
-.moneda1 {
-  display: flex;
-  width:30%;
-  border-radius: 20px;
-}
-.moneda2 {
-  display: flex;
-  width:30%;
-  border-radius: 20px;
-}
-.inputs-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-
-}
-.input-field-2 {
-  width: 90%;
-  height: 40px;
-  border-radius: 50px;
-  outline: none;
-  border: none;
-  padding: 0 20px;
-  font-size: 20px;
-}
-.btn {
-  padding: 8px 18px;
-  border: none;
-  background-color: rgb(255, 255, 255);
-  color: rgb(11, 11, 11);
-  font-weight: bold;
-  cursor: pointer;
-  border-radius: 5px;
-}
-.cont-input{
+.btn-a-2{
   width: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
+  height: 50%;
+  border-radius: 10px;
+  border: none;
+  color: white;
+  background-color: rgb(102, 66, 212);
 }
-.h5{
-  margin: 0%;
-  padding: 0%;
+details{
+  width: 100%;
 }
-@media all and (min-width : 800px){
-  .conta{
-    width: 70%;
+.menu{
+  width: 100%;
+}
+ul{
+display: flex;
+list-style: none;
+gap: 5px;
+}
+li{
+font-size: 16px;
+background-color: rgb(102, 66, 212);
+color: rgb(238, 225, 244);
+border-radius: 5px;
+}
+.btn-2{
+  border-radius: 20px;
+  border: none;
+  background-color: rgb(102, 66, 212);
+}
+@media all and (min-width:800px){
+  .comtenedor-promax-2{
+    margin: auto;
+      width: 80%;
+      height: 60%;
+      background-color:rgb(230, 230, 230) ;
+      border-radius: 10px;
+  }
+  .header-2{
+      text-align: center;
+      width: 100%;
+      height: 20%;
+  }
+  .conversion-2{
+      width: 80%;
+      height: 30%;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .importe-2{
+      width: 100%;
+      height: 65%;
+      margin-bottom: 1.5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .input-label-1{
+  margin-right: 40%;
+  font-size: 20px;
+  margin-left: 20%;
+  }
+  .input-field-2{
+      width: 40%;
+      height: 35%;
+      border: none;
+      border-radius: 10px;
+  }
+  .resultado-2{
+      width: 100%;
+      height: 20%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      align-items: center;
+  }
+  .opciones-2{
+      width: 100%;
+      height: 70%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .select-2{
+      width: 60%;
+      height: 35%;
+      border: none;
+      border-radius: 10px;
+  }
+  .botones-2{
+      width: 100%;
+      height: 70%;
+      margin-top: 7%;
+      display: flex;
+      justify-content: center;
+  }
+  .btn-a-2{
+      margin-bottom: 35%;
+      width: 80%;
+      height: 35%;
+      border-radius: 10px;
+      border: none;
+      color: white;
+      background-color: rgb(39, 7, 136);
   }
 }
-@media all and (min-width : 1280px){
-  .conta{
-    width: 60%;
+@media all and (min-width:1280px){
+  .comtenedor-promax-2{
+    margin: auto;
+      width: 80%;
+      height: 60%;
+      margin-top: 5%;
+      background-color:rgb(230, 230, 230) ;
+      border-radius: 10px;
+  }
+  .botones-2{
+      width: 100%;
+      height: 75%;
+      display: flex;
+      margin-bottom: 3%;
+      justify-content: center;
+  }
+  .importe-2{
+      width: 100%;
+      height: 48%;
+      margin-bottom: 3.5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .btn-a-1{
+      width: 50%;
+      height: 25%;
+      border-radius: 10px;
+      border: none;
+      color: white;
+      background-color: rgb(102, 66, 212);
+  }
+  .input-field-1{
+    width: 80%;
+    height: 54%;
+    border: none;
+    border-radius: 10px;
   }
 }
